2007-12-29  Øyvind Kolås  <pippin@gimp.org>

	* app/gegl/gimpoperationtilesource.c: do not fetch the full extent
	of the TileManager but only the needed pixels. Pass rowstride
	correctly when fecting subregions.

2007-12-29  Øyvind Kolås  <pippin@gimp.org>

	* configure.in: depend on GEGL 0.0.15 (version ends in odd, thus
	depending on svn trunk of GEGL).

	* app/gegl/gimpoperationtilesource.c:
	(gimp_operation_tile_source_process): just use GEGL_AUTO_ROWSTRIDE for
	the rowstride in gegl_buffer_set for now.

2007-12-29  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpbrightnesscontrasttool.c
	* app/tools/gimpcolorbalancetool.c
	* app/tools/gimpcolorizetool.c
	* app/tools/gimphuesaturationtool.c
	* app/tools/gimplevelstool.c
	* app/tools/gimpthresholdtool.c: more cleanup in preparation of
	migrating to gegl.

2007-12-29  Michael Natterer  <mitch@gimp.org>

	* app/gegl/gimp-gegl.c
	* app/gegl/gimpoperationtilesource.c
	* app/gegl/gimpoperationtilesink.c: fixup includes a bit.

2007-12-29  Øyvind Kolås  <pippin@gimp.org>

	* app/gegl/gegl/buffer/: added.
	* app/gegl/gegl/buffer/gegl-buffer-types.h: added from GEGL trunk.

	* app/gegl/gegl/gegl-operation.h: ..
	* app/gegl/gegl/gegl-types.h: updated copy from GEGL trunk.

	* app/gegl/gimp-gegl.c: 
	* app/gegl/gimpoperationtilesink.c:
	* app/gegl/gimpoperationtilesource.c: Modified to build with direct
	copies of GEGL headers.

2007-12-29  Michael Natterer  <mitch@gimp.org>

	* app/base/tile-manager.[ch]: add boxed type GIMP_TYPE_TILE_MANAGER.

	* app/gegl/gimpoperationtilesink.c
	* app/gegl/gimpoperationtilesource.c: use GParamSpecBoxed instead
	of GParamSpecPointer for the tile-manager properties and ref them
	properly. Some cleanup.

2007-12-29  Sven Neumann  <sven@gimp.org>

	* app/gegl/gimp-gegl-utils.h: declare gimp_bpp_to_babl_format() as
	G_GNUC_CONST.

2007-12-29  Michael Natterer  <mitch@gimp.org>

	* app/gegl/gimpoperationtilesink.c (tile_sink_process): add